signin done along with database with three users

--- a/project/platforms/browser/www/profile.html
+++ b/project/platforms/browser/www/profile.html
@@ -13,6 +13,24 @@
       <div data-role="header">
         <h1>Profile</h1>
       </div><!-- /header -->
+
+
+      Description
+
+      <textarea cols="40" rows="8" name="textarea-18" id="textarea-18" placeholder="Description"></textarea>
+
+
+      <!-- Photo.  User can either:
+      Choose an existing photo from their phone’s gallery
+      Take a photo with their camera
+      Change their name
+      Change their location -->
+
+
+
+
+
+
   </div>
 
   </body>
