--- a/project/platforms/browser/www/signup.html
+++ b/project/platforms/browser/www/signup.html
@@ -27,7 +27,7 @@
           <input type="email" data-clear-btn="true" name="email-2" id="email" value=""placeholder="Email">
           <input type="password" data-clear-btn="true" name="password-2" id="password" value="" autocomplete="off" placeholder="password">
           <input type="text" data-clear-btn="true" name="text-3" id="name" value="" placeholder="Name">
-          <input type="text" data-role="date" id="dob">
+          <input type="text" data-role="date" id="dob" placeholder="mm/dd/yyyy">
           <input type="search" name="search-5" id="location" value="" placeholder="Location">
           <input type="submit" value="Signup">
         </form>
