--- a/project/www/index.html
+++ b/project/www/index.html
@@ -14,17 +14,18 @@
 
 
 
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+       
+<!-- 
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
+         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
-
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World1111111</title>
+        <title>Tynder</title>
     </head>
     <body>
 
@@ -47,9 +48,9 @@
 </div> -->
 
 <form>
-  <input type="text" data-clear-btn="true" name="text-3" id="text-3" value="" placeholder="Username">
-     <input type="text" data-clear-btn="true" name="text-3" id="text-3" value="" placeholder="password">
-     <input type="submit" value="Login">
+  <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder="Username" >
+     <input type="text" data-clear-btn="true" name="text-3" id="password" value="" placeholder="password" >
+     <input type="submit" id="login" >
      <p class="mc-top-margin-1-5"><a href="signup.html">Create an account</a></p>
 
 </form>
