--- a/project/www/index.html
+++ b/project/www/index.html
@@ -6,7 +6,7 @@
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        
+
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -16,8 +16,10 @@
     <body>
       <div style="max-width:70%; margin:3% auto;">
         <form>
-          <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder=" User Email" >
-          <input type="text" data-clear-btn="true" name="text-3" id="password" value="" placeholder="User Password" >
+          <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder="User Email" required>
+          <!-- <input type="text" data-clear-btn="true" name="text-3" id="password" value="" placeholder="User Password" > -->
+          <input type="password" data-clear-btn="true" name="password-2" id="password" value="" autocomplete="off" placeholder="User Password" required>
+
           <input type="submit" id="login" value="Login" >
           <p class="mc-top-margin-1-5"><a href="signup.html">Create an account</a></p>
         </form>
