--- a/project/www/edit.html
+++ b/project/www/edit.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Edit profile</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+
+
+
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+       <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+       <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
   </head>
   <body>
 
