--- a/project/platforms/browser/www/index.html
+++ b/project/platforms/browser/www/index.html
@@ -17,10 +17,9 @@
       <div style="max-width:70%; margin:3% auto;">
         <form>
           <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder="User Email" required>
-          <!-- <input type="text" data-clear-btn="true" name="text-3" id="password" value="" placeholder="User Password" > -->
           <input type="password" data-clear-btn="true" name="password-2" id="password" value="" autocomplete="off" placeholder="User Password" required>
 
-          <input type="submit" id="login" value="Login" >
+          <input type="button" id="login" value="Login" >
           <p class="mc-top-margin-1-5"><a href="signup.html">Create an account</a></p>
         </form>
       </div>
