--- a/project/platforms/browser/www/signup.html
+++ b/project/platforms/browser/www/signup.html
@@ -4,13 +4,13 @@
      <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<!--
+
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
 
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css"> -->
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Tynder</title>
   </head>
   <body>
@@ -22,14 +22,16 @@
     	</div><!-- /header -->
 
   <div style="max-width:70%; margin:3% auto;">
-      <form action="index.html" method="get">
+      <form>
           <input type="email" data-clear-btn="true" name="email-2" id="email" value=""placeholder="Email">
           <input type="password" data-clear-btn="true" name="password-2" id="password" value="" autocomplete="off" placeholder="password">
           <input type="text" data-clear-btn="true" name="text-3" id="name" value="" placeholder="Name">
           <input type="text" data-role="date" id="dob" placeholder="mm/dd/yyyy">
           <input type="search" name="search-5" id="location" value="" placeholder="Location">
-          <input type="submit"  id="signup" value="Signup">
+          <input type="button" id="signup" value="Signup">
+          <input type="button" id="refresh" value="Refresh">
         </form>
+        
 
     </div>
   </div>
