--- a/project/www/edit.html
+++ b/project/www/edit.html
@@ -27,9 +27,9 @@
     Photo.  User can either:
 
     Choose an existing photo from their phone’s gallery
-    <input type="file" data-clear-btn="true" name="file-2" id="file-2" value="">
+    <input type="file" data-clear-btn="true" name="file-2" id="pickPhotoButton" value="">
     Take a photo with their camera
-    <input type="file" accept="image/*;capture=camera">
+    <input type="file" id="takePhotoButton" accept="image/*;capture=camera">
     Change their name
     <input type="text" data-clear-btn="true" name="text-3" id="name" value="" placeholder="Name">
 
