--- a/project/www/edit.html
+++ b/project/www/edit.html
@@ -29,7 +29,7 @@
     Choose an existing photo from their phone’s gallery
     <input type="file" data-clear-btn="true" name="file-2" id="pickPhotoButton" value="">
     Take a photo with their camera
-    <input type="file" id="takePhotoButton" accept="image/*;capture=camera">
+    <input type="button" id="takePhotoButton" value="cam">
     Change their name
     <input type="text" data-clear-btn="true" name="text-3" id="name" value="" placeholder="Name">
 
