--- a/project/platforms/browser/www/profile.html
+++ b/project/platforms/browser/www/profile.html
@@ -30,7 +30,7 @@
 
 
 
-      Description
+      <!-- Description -->
       <span id="resultsSection"></span>
 
       <input type="submit" id="edit" value="Edit Profile" >
