--- a/project/www/edit.html
+++ b/project/www/edit.html
@@ -23,7 +23,7 @@
       </div><!-- /header -->
 
    
-    change  your profile picture
+    select your profile picture
 
     <!-- Choose an existing photo from their phone’s gallery -->
     <input type="button" data-clear-btn="true" name="file-2" id="pickPhotoButton" value="gallery">
