--- a/project/platforms/browser/www/edit.html
+++ b/project/platforms/browser/www/edit.html
@@ -35,11 +35,19 @@
     <!-- Change their location -->
     <input type="text" data-clear-btn="true" name="text-3" id="location" value="" placeholder="Location">
 
-<!-- Change their location -->
+<!-- Change their description -->
     <input type="text" data-clear-btn="true" name="text-3" id="description" value="" placeholder="change your description">
 
+<!-- Change their email -->
+    <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder="change your email">
 
-    <!-- raman -->
+    <!-- Change their password -->
+    <input type="text" data-clear-btn="true" name="text-3" id="password" value="" placeholder="change your password">
+
+<!-- Change their date of birth -->
+    <input type="text" data-clear-btn="true" name="text-3" id="dob" value="" placeholder="DD/MM/YY">
+
+    
 
       <input type="submit" id="update" value="Update Profile" >
 
