--- a/project/platforms/browser/www/index.html
+++ b/project/platforms/browser/www/index.html
@@ -16,7 +16,9 @@
     <body>
       <div style="max-width:70%; margin:3% auto;">
         <form>
-          <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder="User Email" required>
+          <!-- <input type="text" data-clear-btn="true" name="text-3" id="email" value="" placeholder="User Email" required> -->
+          <input type="email" data-clear-btn="true" name="email-2" id="email" value="" placeholder="Email" required>
+
           <input type="password" data-clear-btn="true" name="password-2" id="password" value="" autocomplete="off" placeholder="User Password" required>
 
           <input type="button" id="login" value="Login" >
